ecmascript/parser/tests/test262-error-references/fail/25b1013a4046bd70.js.stderr
error: Expected ), got (
 --> $DIR/tests/test262-parser/fail/25b1013a4046bd70.js:1:21
  |
1 | try {} catch (answer()) {} 
  |                     ^

